# anm-api-consumer

./: .env.example  .gitignore  README.md  config.ini  dashboard_vale.sql  pyproject.toml  readme.md  requirements.txt
src/: __init__.py  database.py  main.py  preprocessor.py  scraper.py  updater.py  utils.py
src/modules/cfem/: __init__.py  schema.py
src/modules/cfem/arrecadacao/: __init__.py  extract.py  load.py  transform.py
src/modules/scm/: scm.py
src/modules/sigmine/: sigmine.py
